--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,27 @@
 *.pdb
 *.cache
 .vs/MazeAnalyzer/v16/.suo
+MazeAnalyzer/obj/Release/MazeAnalyzer.Properties.Resources.resources
+MazeAnalyzer/obj/Release/MazeAnalyzer.exe
+MazeAnalyzer/obj/Release/MazeAnalyzer.csproj.FileListAbsolute.txt
+MazeAnalyzer/obj/Release/build.force
+MazeAnalyzer/obj/Debug/MazeAnalyzer.Properties.Resources.resources
+MazeAnalyzer/obj/Debug/MazeAnalyzer.Main.resources
+MazeAnalyzer/obj/Debug/MazeAnalyzer.exe
+MazeAnalyzer/obj/Debug/MazeAnalyzer.csproj.FileListAbsolute.txt
+MazeAnalyzer/bin/Release/MazeLib.dll
+MazeAnalyzer/bin/Release/MazeAnalyzer.exe
+MazeAnalyzer/bin/Debug/MazeLib.dll
+MazeAnalyzer/bin/Debug/MazeAnalyzer.exe
+MazeAnalyzer/obj/Release/MazeAnalyzer.Properties.Resources.resources
+MazeAnalyzer/obj/Release/MazeAnalyzer.exe
+MazeAnalyzer/obj/Release/MazeAnalyzer.csproj.FileListAbsolute.txt
+MazeAnalyzer/obj/Release/build.force
+MazeAnalyzer/obj/Debug/MazeAnalyzer.Properties.Resources.resources
+MazeAnalyzer/obj/Debug/MazeAnalyzer.Main.resources
+MazeAnalyzer/obj/Debug/MazeAnalyzer.exe
+MazeAnalyzer/obj/Debug/MazeAnalyzer.csproj.FileListAbsolute.txt
+MazeAnalyzer/bin/Release/MazeLib.dll
+MazeAnalyzer/bin/Release/MazeAnalyzer.exe
+MazeAnalyzer/bin/Debug/MazeLib.dll
+MazeAnalyzer/bin/Debug/MazeAnalyzer.exe
