--- a/MazeAnalyzer/MazeAnalyzer.csproj
+++ b/MazeAnalyzer/MazeAnalyzer.csproj
@@ -97,6 +97,12 @@
     <Compile Include="AnalyzerProjectWizard.Designer.cs">
       <DependentUpon>AnalyzerProjectWizard.cs</DependentUpon>
     </Compile>
+    <Compile Include="Heatmap.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Heatmap.Designer.cs">
+      <DependentUpon>Heatmap.cs</DependentUpon>
+    </Compile>
     <Compile Include="ListViewEx.cs" />
     <Compile Include="SelectPaths.cs">
       <SubType>Form</SubType>
@@ -149,6 +155,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AnalyzerProjectWizard.resx">
       <DependentUpon>AnalyzerProjectWizard.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Heatmap.resx">
+      <DependentUpon>Heatmap.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Measure.resx">
       <DependentUpon>Measure.cs</DependentUpon>
