--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@
 *.exe
 *.exe
 *.exe
+MazeAnalyzer/bin/Debug/MazeAnalyzer.exe
+MazeAnalyzer/bin/Debug/MazeLib.dll
+MazeAnalyzer/obj/Debug/MazeAnalyzer.exe
