--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,6 @@ MazeAnalyzer/bin/Release/MazeLib.dll
 MazeAnalyzer/bin/Release/MazeAnalyzer.exe
 MazeAnalyzer/bin/Debug/MazeLib.dll
 MazeAnalyzer/bin/Debug/MazeAnalyzer.exe
+MazeAnalyzer/obj/Debug/MazeAnalyzer.exe
+MazeAnalyzer/bin/Debug/MazeLib.dll
+MazeAnalyzer/bin/Debug/MazeAnalyzer.exe
