Maze overdraw and minor fixes
Replaced tooltip mechanism with toolbar hover coordinates

Fixed issue where extra space at bottom was drawn

Modified default settings to overdraw maze

Modified Presence value to be percentage (100%)

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,7 @@
 MazeAnalyzer/bin/Debug/MazeAnalyzer.exe
 MazeAnalyzer/bin/Debug/MazeLib.dll
 MazeAnalyzer/obj/Debug/MazeAnalyzer.exe
+MazeAnalyzer/bin/Debug/MazeAnalyzer.exe
+MazeAnalyzer/bin/Debug/MazeLib.dll
+MazeAnalyzer/obj/Debug/MazeAnalyzer.csproj.FileListAbsolute.txt
+MazeAnalyzer/obj/Debug/MazeAnalyzer.csproj.FileListAbsolute.txt
