Remove and unversion files

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,6 @@ MazeAnalyzer/bin/Debug/MazeAnalyzer.exe
 MazeAnalyzer/bin/Debug/MazeLib.dll
 MazeAnalyzer/obj/Debug/MazeAnalyzer.csproj.FileListAbsolute.txt
 MazeAnalyzer/obj/Debug/MazeAnalyzer.csproj.FileListAbsolute.txt
+MazeAnalyzer/bin/Debug/MazeAnalyzer.exe
+MazeAnalyzer/bin/Debug/MazeLib.dll
+MazeAnalyzer/obj/Debug/MazeAnalyzer.csproj.FileListAbsolute.txt
