Removed unversioned files

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,48 @@ MazeAnalyzer/obj/Debug/MazeAnalyzer.csproj.FileListAbsolute.txt
 MazeAnalyzer/bin/Debug/MazeAnalyzer.exe
 MazeAnalyzer/bin/Debug/MazeLib.dll
 MazeAnalyzer/obj/Debug/MazeAnalyzer.csproj.FileListAbsolute.txt
+MazeAnalyzer/bin/Release/MazeAnalyzer.exe
+MazeAnalyzer/bin/Release/MazeLib.dll
+MazeAnalyzer/obj/Release/MazeAnalyzer.csproj.FileListAbsolute.txt
+MazeAnalyzer/obj/Release/MazeAnalyzer.exe
+MazeAnalyzer/obj/Release/MazeAnalyzer.Heatmap.resources
+MazeAnalyzer/obj/Release/MazeAnalyzer.Main.resources
+MazeAnalyzer/bin/Debug/MazeAnalyzer.exe.config
+MazeAnalyzer/bin/Debug/MazeAnalyzer.vshost.exe
+MazeAnalyzer/bin/Debug/MazeAnalyzer.vshost.exe.config
+MazeAnalyzer/bin/Debug/MazeAnalyzer.vshost.exe.manifest
+MazeAnalyzer/bin/Release/MazeAnalyzer.exe
+MazeAnalyzer/bin/Release/MazeAnalyzer.exe.config
+MazeAnalyzer/bin/Release/MazeAnalyzer.vshost.exe
+MazeAnalyzer/bin/Release/MazeAnalyzer.vshost.exe.config
+MazeAnalyzer/bin/Release/MazeAnalyzer.vshost.exe.manifest
+MazeAnalyzer/bin/Release/MazeLib.dll
+MazeAnalyzer/obj/Debug/MazeAnalyzer.About.resources
+MazeAnalyzer/obj/Debug/MazeAnalyzer.AnalyzerProjectWizard.resources
+MazeAnalyzer/obj/Debug/MazeAnalyzer.csproj.CopyComplete
+MazeAnalyzer/obj/Debug/MazeAnalyzer.ExpInfoPrioritySort.resources
+MazeAnalyzer/obj/Debug/MazeAnalyzer.Exporter.resources
+MazeAnalyzer/obj/Debug/MazeAnalyzer.Heatmap.resources
+MazeAnalyzer/obj/Debug/MazeAnalyzer.LogProcessor.resources
+MazeAnalyzer/obj/Debug/MazeAnalyzer.Main.resources
+MazeAnalyzer/obj/Debug/MazeAnalyzer.Measure.resources
+MazeAnalyzer/obj/Debug/MazeAnalyzer.Properties.Resources.resources
+MazeAnalyzer/obj/Debug/MazeAnalyzer.SelectPaths.resources
+MazeAnalyzer/obj/Debug/MazeAnalyzer.Splash.resources
+MazeAnalyzer/obj/Debug/TempPE/Properties.Resources.Designer.cs.dll
+MazeAnalyzer/obj/Release/MazeAnalyzer.About.resources
+MazeAnalyzer/obj/Release/MazeAnalyzer.AnalyzerProjectWizard.resources
+MazeAnalyzer/obj/Release/MazeAnalyzer.csproj.CopyComplete
+MazeAnalyzer/obj/Release/MazeAnalyzer.csproj.FileListAbsolute.txt
+MazeAnalyzer/obj/Release/MazeAnalyzer.exe
+MazeAnalyzer/obj/Release/MazeAnalyzer.ExpInfoPrioritySort.resources
+MazeAnalyzer/obj/Release/MazeAnalyzer.Exporter.resources
+MazeAnalyzer/obj/Release/MazeAnalyzer.Heatmap.resources
+MazeAnalyzer/obj/Release/MazeAnalyzer.HeatmapConfig.resources
+MazeAnalyzer/obj/Release/MazeAnalyzer.LogProcessor.resources
+MazeAnalyzer/obj/Release/MazeAnalyzer.Main.resources
+MazeAnalyzer/obj/Release/MazeAnalyzer.Measure.resources
+MazeAnalyzer/obj/Release/MazeAnalyzer.Properties.Resources.resources
+MazeAnalyzer/obj/Release/MazeAnalyzer.SelectPaths.resources
+MazeAnalyzer/obj/Release/MazeAnalyzer.Splash.resources
+MazeAnalyzer/obj/Release/TempPE/Properties.Resources.Designer.cs.dll
